--- a/hrt-background.Rmd
+++ b/hrt-background.Rmd
@@ -76,9 +76,11 @@ kable_styling(bootstrap_options = "bordered")
 
 ## 1. Background information
 
-The HRT ad-hoc publication has been developed in response to current supply issues of HRT. The publication has been developed to provide assistance to colleagues in dealing with requests for data relating to HRT. The publication will help address the supply issues and aid the Menopause Taskforce in ensuring all women have the correct access to HRT. The formation of the Menopause Taskforce comes ahead of the formation of the first government-led Women’s Health Strategy for England to tackle the gender health gap.
+The HRT ad hoc publication has been developed in response to current supply issues of HRT. The publication has been developed to provide assistance to colleagues in dealing with requests for data relating to HRT. The publication will help address the supply issues and aid the Menopause Taskforce in ensuring all women have the correct access to HRT. The formation of the Menopause Taskforce comes ahead of the formation of the first government-led [Women’s Health Strategy for England](https://www.gov.uk/government/publications/womens-health-strategy-for-england/womens-health-strategy-for-england#menopause) to tackle the gender health gap.
 
 Millions of women go through the menopause every year, with the majority experiencing symptoms that can be severe, such as low mood, anxiety, hot flushes and difficulty sleeping, and have a negative impact on everyday life.
+
+Most women (8 out of 10) experience some symptoms, typically lasting about 4 years after the last period, but continuing for up to 12 years in about 10% of women. Prolonged lack of oestrogen affects the bones and cardiovascular system and postmenopausal women are at increased risk of a number of long-term conditions, such as osteoporosis.
 
 The taskforce will tackle issues surrounding the menopause including increasing access to treatment, and ending the taboos and stigmas that still surround conversations about the menopause, including in the workplace.
 
@@ -126,9 +128,51 @@ As this process takes time new and updated verified data from PDS is loaded into
 
 ## 2. Methodology
 
+### 2.1 Drug details {.toc-ignore}
+
+#### 2.1.1. Drug classification {.toc-ignore}
+
+In these statistics the two BNF paragraphs were chosen as they include medications which are prescribed for the treatment for menopause and perimenopause symptoms.
+
+### 2.2 Patient details {.toc-ignore}
+
+#### 2.2.1. Patient age {.toc-ignore}
+
+To report a patient’s age consistently across a financial year these statistics classify a patient based on their age at 30 September of the given financial year. This uses information from PDS for verified NHS numbers only. Information relating to NHS numbers that have not been verified by PDS are displayed in these statistics under the ‘unknown/indeterminate’ age band.
+
+There are some inconsistencies within the PDS data that is held within the NHSBSA Data & Insight Data Warehouse. These occur when a patient has had their information updated and can hold more than one date of birth. In these instances, multiple counting can occur for patients, although this is estimated to only affect a very small number of patients. We will investigate methodologies to reduce the impact of these inconsistencies.
+
+#### 2.2.2. Patient deprivation {.toc-ignore}
+
+[The English Indices of Deprivation 2019](https://www.gov.uk/government/statistics/english-indices-of-deprivation-2019) have been used in these statistics as a measure of the level of deprivation of the areas in which prescriptions have been issued. In particular, that headline Index of Multiple Deprivation (IMD) is included. IMD data has been joined to the lower-layer super output area (LSOA) 2011. This combined dataset has then been joined to prescription data using the LSOA of the patient that received the item. The LSOAs are analysed in groups, or ‘quintiles’ each representing 20% of the areas from the deprivation scores, from 1 as the most deprived to 5 as the least deprived. The measure of deprivation reported in these statistics is the IMD quintile of the area in which the patient resides.
+
+Where a patient’s LSOA has not been able to be matched or was not available, the records are reported as ‘unknown’ IMD decile.
+
+### 2.3. Changes to BNF classifications {.toc-ignore}
+
+These statistics use the BNF therapeutic classifications defined in the British National Formulary (BNF) using the classification system prior to BNF edition 70. Each January the NHSBSA updates the classification of drugs within the BNF hierarchy which may involve some drugs changing classification between years of prescribing data. The NHSBSA publishes the latest BNF information each year via its information systems. This is currently done via the [Information Services Portal (ISP)](https://www.nhsbsa.nhs.uk/access-our-data-products/information-services-portal-isp) but may in the near future be transitioned to the [NHSBSA Open Data Portal (ODP)](https://opendata.nhsbsa.net/).
+
 ## 3. Changes to this publication
 
+This is an ad hoc official statistic release, a one off publication to help inform users and stakeholders about the prescribing of HRT medications in England.
+
 ## 4. Strengths and limitations
+
+## 4.1. Strengths {.toc-ignore}
+
+The main strength of these statistics is the completeness of the dataset and accuracy of information captured during processing activities carried out by the NHSBSA. This dataset covers all prescribing in England that has subsequently been dispensed in the community in England, Scotland, Wales, and the Channel Islands, with consistency in the way data has been captured across the whole dataset. All the data has come from the same administrative source. This administrative data is required to be as accurate as possible as it is used for paying dispensing contractors for services provided to NHS patients.
+
+## 4.2. Limitations {.toc-ignore}
+
+These statistics exclude prescriptions that were issued but not presented for dispensing and prescriptions that were not submitted to the NHSBSA for processing and reimbursement. Prescriptions issued and dispensed in prisons, hospitals and private prescriptions are also excluded.
+
+Pharmacists in the UK can now dispense the hormone replacement therapy (HRT) drug Gina 10 microgram vaginal tablets without a prescription. As Gina 10 microgram vaginal tablets are sold over the counter, the NHSBSA does not hold any data on volumes, costs or patient counts.
+
+Additional patient information received from PDS for matched NHS numbers is not returned until after the monthly ETL process for prescription data into the NHSBSA Data & Insight Data Warehouse is complete, and so the year in progress monthly patient counts may include some unverified data and subsequently be revised in a later publication.
+
+The NHSBSA do not capture the clinical indication of a prescription and therefore do not know the reason why a prescription was issued, or the condition it is intended to treat. Many drugs have multiple uses, and although classified in the BNF by their primary therapeutic use may be issued to treat a condition outside of this. Due to this, these statistics may not give accurate estimations of prescribing to treat specific conditions. 
+
+The lower-layer super output areas (LSOA) of the patient who received the medication is only captured for prescriptions via Electronic Prescription Service (EPS). For those patients who received both paper prescribing and EPS we have imputed their LSOA from the latest available data. For patients who only received exclusively paper prescribing there will be no LSOA available and their IMD quitile will be reported as 'Unknown'.
 
 ## 5. Revisions
 
@@ -170,7 +214,7 @@ These principles guide us and are complimented by the UKSA’s regulatory standa
 
 ***This dimension covers the degree to which the product meets user need in both coverage and content***
 
-The Hormone Replacement Therapy publication, released as an ad-hoc publication, summarises the number of items prescribed for drugs used in the treatment of menopause and perimenopause symptoms. The statistics also give patient breakdowns including by 5-year age band, and IMD decile. These statistics cover from financial year 2015/16 onwards, allowing the analysis of long-term trends in prescribing. We believe that they can used to inform policy decisions at a national and local level, by the public to scrutinise prescribing habits, and by academia and applied health researchers for matters relating to public health. The NHSBSA also routinely receives Freedom of Information requests and parliamentary questions about this subject matter. 
+The Hormone Replacement Therapy publication, released as an ad hoc publication, summarises the number of items prescribed for drugs used in the treatment of menopause and perimenopause symptoms. The statistics also give patient breakdowns including by 5-year age band, and IMD decile. These statistics cover from financial year 2015/16 onwards, allowing the analysis of long-term trends in prescribing. We believe that they can used to inform policy decisions at a national and local level, by the public to scrutinise prescribing habits, and by academia and applied health researchers for matters relating to public health. The NHSBSA also routinely receives Freedom of Information requests and parliamentary questions about this subject matter. 
 
 We will be gathering feedback from users of these statistics on an on-going basis to help shape them and ensure that they remain relevant and of use.
 
@@ -192,7 +236,7 @@ As there is a manual data entry element to this system then inevitably some smal
 
 ***Timeliness refers to the time gap between publication and the reference period. Punctuality refers to the gap between planned and actual publication dates***
 
-The Hormone Replacement Therapy publication is an ad-hoc publication. The date of release for the publication will be announced in advance in line with our statistical release calendar.
+The Hormone Replacement Therapy publication is an ad hoc publication. The date of release for the publication will be announced in advance in line with our statistical release calendar.
 
 ### 7.4. Accessibility and clarity {.toc-ignore}
 
@@ -228,7 +272,7 @@ Changes to the figures over time should be interpreted in the wider context of t
 
 The main trade-off in this publication is the balance between timeliness and data quality. Sufficient time is allowed from the data being made available to allow for the information to be produced and quality assured. 
 
-We are releasing this ad-hoc Official Statistic to allow users to begin analysing them, however we intend to introduce further data cleansing in the future that will improve the quality and accuracy of these statistics. This will be introduced once the data cleansing can be done in a timely manner and will not impact the release of the publication. The impact expected to be a small amount of reclassification – that will not impact most of the main conclusions or user’s analysis.
+We are releasing this ad hoc Official Statistic to allow users to begin analysing them, however we intend to introduce further data cleansing in the future that will improve the quality and accuracy of these statistics. This will be introduced once the data cleansing can be done in a timely manner and will not impact the release of the publication. The impact expected to be a small amount of reclassification – that will not impact most of the main conclusions or user’s analysis.
 
 **Assessment of user needs and perceptions**
 
@@ -267,7 +311,7 @@ A patient’s age, and therefore 5-year age band, has been calculated at 30 Sept
 
 ### British National Formulary (BNF) {.toc-ignore}
 
-Dependency Forming Medicine data uses the therapeutic classifications defined in the British National Formulary (BNF) using the classification system prior to edition 70. NHS Prescription Services have created pseudo BNF chapters for items not included in BNF chapters 1 to 15. The majority of such items are dressings and appliances, which have been classified into six pseudo BNF chapters (18 to 23).
+Hormone Replacement Therapy data uses the therapeutic classifications defined in the British National Formulary (BNF) using the classification system prior to edition 70. NHS Prescription Services have created pseudo BNF chapters for items not included in BNF chapters 1 to 15. The majority of such items are dressings and appliances, which have been classified into six pseudo BNF chapters (18 to 23).
 Information on why a drug is prescribed is not available in this dataset. Since drugs can be prescribed to treat more than one condition, it may not be possible to separate the different conditions for which a drug may have been prescribed.
 
 The BNF has multiple levels, in descending order from largest grouping to smallest: chapter, section, paragraph, sub-paragraph, chemical substance, product, presentation. Presentations in chapters 20-23 do not have an assigned BNF paragraph, sub-paragraph, chemical substance or product.
@@ -306,6 +350,12 @@ A prescription (also referenced as a prescription form) has two incarnations: a 
 
 ### Presentation {.toc-ignore}
 A presentation is the name given to the specific type, strength, and pharmaceutical formulation of a drug or the specific type of an appliance. For example, Paracetamol 500mg tablets.
+
+### Total Quantity {.toc-ignore}
+
+This is the total quantity of a drug or appliance that was prescribed. This is
+calculated by multiplying Quantity by Items. For example, if 2 items of Amoxicillin
+500mg capsules with a quantity of 28 were prescribed, total quantity will be 56.
 
 ## 9. Feedback and contact us
 
